fix(ui): autohide scrollbars

--- a/app/components/Settings/Locale/Locale.scss
+++ b/app/components/Settings/Locale/Locale.scss
@@ -17,7 +17,7 @@
 
 .locales {
   height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   li {
     background: var(--secondaryColor);
